<resources>
    <string name="app_name">AndroidAPP</string>

    <!-- activity_login.xml -->
    <string name="etLogin">Nome de usuário</string>
    <string name="etPassword">Senha</string>
    <string name="btn_login">Acessar</string>
    <string name="btn_link_to_register">Ainda não é membro? Cadastrar agora.</string>

    <!-- activity_register.xml -->
    <string name="etName">Nome completo</string>
    <string name="etEmail">E-mail</string>
    <string name="etPassConf">Confirme sua senha</string>
    <string name="rbMale">Homem</string>
    <string name="rbFemale">Mulher</string>
    <string name="btn_register">Registar-se</string>

    <!-- activity_main.xml -->
    <string name="tvWelcome">Bem-vindo</string>
    <string name="btn_logout">LOGOUT</string>
    
    <!-- ImageAdapter.java -->
    <string-array name="sample_main">
        <item>Escalas</item>
        <item>Cartão de Ponto</item>
        <item>Funcionário</item>
        <item>Perfil</item>
        <item>Preferências</item>
        <item>Logout</item>
    </string-array>

    <!-- UsuarioAsync.java -->
    <string name="alertRegister">Atenção</string>
    <string name="messageRegister">Você deve logar para poder continuar!</string>

    <!-- RegisterController.java -->
    <string name="toastConnect">Você não está conectado!</string>
    <string name="toastNull">Existem campos em branco!</string>
    <string name="toastNotMatch">Senhas não confere!</string>
    <string name="toastGenre">Selecione o sexo!</string>
</resources>
